# testing_gfxhal

./: .gitignore  Cargo.toml  LICENSE  README.md  frag.spv  vert.spv
.asset_cache/: bunny.mesh
assets/shaders/: fullscreen_triangle.vert  mesh.frag  mesh.vert  postprocess.frag
src/: asset_manager.rs  common.rs  main.rs  mesh.rs  resource.rs  util.rs
