[package]
name = "testing_2"
version = "0.1.0"
authors = ["ojnline <58391142+ojnline@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gfx-backend-empty"]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl", "gfx-backend-gl/glutin"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
gfx-hal = "0.5.0"
gfx-memory = "0.1.3"
glsl-to-spirv = "0.1.7"
winit = "0.22.1"
legion = "0.2.1"
nalgebra = {version = "0.21.0", features = ["serde-serialize"]}
ncollide3d = "0.23.0"
nphysics3d = "0.15.0"
serde = { version = "1.0.110", features = ["derive"] }
bincode = "1.2.1"
smallvec = "1.3.0"
simple_logger = "1.6.0"
log = "0.4.8"
microprofile = "0.2.1"
tobj = "2.0.0"

[profile.dev.package."nphysics3d"]
opt-level = 3
[profile.dev.package."nalgebra"]
opt-level = 3
[profile.dev.package."ncollide3d"]
opt-level = 3

# gfx-hal backends
[dependencies.gfx-backend-empty]
version = "0.5.0"
optional = true

[dependencies.gfx-backend-gl]
version = "0.5.0"
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.5.2"
features = ["x11"]
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.5.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
version = "0.5.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.5.0"
optional = true